--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <logback.version>1.7.36</logback.version>
         <junit.version>5.8.2</junit.version>
         <assertj.version>3.22.0</assertj.version>
+        <mockito.version>4.6.1</mockito.version>
         <jmh.version>1.34</jmh.version>
     </properties>
 
@@ -103,6 +104,11 @@
                 <version>${junit.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.assertj</groupId>
@@ -160,6 +166,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
 
