--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,12 @@
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <logback.version>1.7.36</logback.version>
-        <junit.version>5.8.2</junit.version>
-        <assertj.version>3.22.0</assertj.version>
+        <resource.version>1.0.0-SNAPSHOT</resource.version>
+        <logback.version>2.0.6</logback.version>
+        <junit.version>5.9.2</junit.version>
+        <assertj.version>3.24.1</assertj.version>
         <mockito.version>4.6.1</mockito.version>
-        <jmh.version>1.34</jmh.version>
+        <jmh.version>1.36</jmh.version>
     </properties>
 
     <developers>
@@ -90,11 +91,9 @@
             </dependency>
 
             <dependency>
-                <groupId>io.micrometer</groupId>
-                <artifactId>micrometer-bom</artifactId>
-                <version>1.9.0</version>
-                <type>pom</type>
-                <scope>import</scope>
+                <groupId>net.microfalx.resource</groupId>
+                <artifactId>resource-core</artifactId>
+                <version>${resource.version}</version>
             </dependency>
 
             <!-- Tests -->
@@ -138,15 +137,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-core</artifactId>
-            <optional>true</optional>
+            <groupId>net.microfalx.resource</groupId>
+            <artifactId>resource-core</artifactId>
         </dependency>
 
         <!-- Tests -->
@@ -190,6 +182,12 @@
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
 
