--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>net.microfalx</groupId>
         <artifactId>pom</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
 
     <name>Object Pool</name>
@@ -56,7 +56,7 @@
     <inceptionYear>2022</inceptionYear>
 
     <properties>
-        <bom.version>1.0.0</bom.version>
+        <bom.version>1.0.1</bom.version>
         <resource.version>1.0.0-SNAPSHOT</resource.version>
     </properties>
 
@@ -73,7 +73,7 @@
             <dependency>
                 <groupId>net.microfalx.bom</groupId>
                 <artifactId>bom-base</artifactId>
-                <version>1.0.0</version>
+                <version>${bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
